Added routes and databse for model + relationship with project
